# i2c_stmp_demo

./: CMakeLists.txt  Main.qml  main.cpp
i2c/: as5600.cpp  as5600.h  as5600sensor.cpp  as5600sensor.h  as5600sensorfactory.h  ias5600.h  ias5600sensor.h  mockas5600.h  mockas5600sensor.cpp  mockas5600sensor.h  realas5600.cpp  realas5600.h  realas5600sensor.cpp  realas5600sensor.h  smbus.hpp
